src/objects/MB_Billing_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <description>Billing currency code</description>
        <label>Billing Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Month__c</fullName>
        <description>Billing cycle month and year</description>
        <label>Billing Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Minutes__c</fullName>
        <description>Call usage in minutes</description>
        <label>Call Minutes</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MB_Charge_Type__c Look up relation</description>
        <label>Charge Type</label>
        <referenceTo>MB_Charge_Type__c</referenceTo>
        <relationshipLabel>Billing Entities</relationshipLabel>
        <relationshipName>Billing_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Consumed_In_MB__c</fullName>
        <description>Data usage in MB</description>
        <label>Data Consumed In MB</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MB_Device_Details__c Look up relation</description>
        <label>Device Details</label>
        <referenceTo>MB_Device_Details__c</referenceTo>
        <relationshipLabel>Billing Entities</relationshipLabel>
        <relationshipName>Billing_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Count__c</fullName>
        <description>Count of usage</description>
        <label>Item Count</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Net_Amount__c</fullName>
        <description>Bill amount of each billing entity</description>
        <label>Local Net Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Messages__c</fullName>
        <description>Messages count</description>
        <label>Messages</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Usage_Consumed__c</fullName>
        <description>Non Usage Consumed</description>
        <label>Non Usage Consumed</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <description>Device service name</description>
        <label>Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MB_Usage_Type__c Look up relation</description>
        <label>Usage Type</label>
        <referenceTo>MB_Usage_Type__c</referenceTo>
        <relationshipLabel>Billing Entities</relationshipLabel>
        <relationshipName>Billing_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <description>Country of user</description>
        <formula>User__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <description>Email of user</description>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User look up relation</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billing_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iPass_Consumed_In_MB__c</fullName>
        <description>iPass usage in MB</description>
        <label>iPass Consumed In MB</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Billing Entity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Billing_Month__c</columns>
        <columns>User__c</columns>
        <columns>Local_Net_Amount__c</columns>
        <columns>Charge_Type__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>Call_Minutes__c</columns>
        <columns>Data_Consumed_In_MB__c</columns>
        <columns>iPass_Consumed_In_MB__c</columns>
        <columns>Messages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>normal user</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BE-{DD}-{MM}-{YY}-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>